[gd_scene load_steps=16 format=2]

[ext_resource path="res://Actors/ActorBody.gd" type="Script" id=1]
[ext_resource path="res://Assets/Characters/Monkey/Leg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Monkey/Torso.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/Monkey/HandL.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/Monkey/Head01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/Monkey/HandR.png" type="Texture" id=6]
[ext_resource path="res://Actors/AnimationTree.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/LeftHand:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/LeftHand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/RightHand:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/RightHand:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ), Vector2( 0, -90 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyParts/Head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyParts/Body:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyParts/Body:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyParts/LeftLeg:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 124 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BodyParts/LeftLeg:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("BodyParts/RightLeg:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, 124 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("BodyParts/RightLeg:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("BodyParts/LeftLeg/LeftLegSprite:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21.0503, -21.3768 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("BodyParts/LeftLeg/LeftLegSprite:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("BodyParts/RightLeg/RightLegSprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.50183, -20.2545 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("BodyParts/RightLeg/RightLegSprite:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Interact"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/LeftHand/LeftHandSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 30.0, -20.0, 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/RightHand/RightHandSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 30.0, -20.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/Head/HeadSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 39.5807, 35.172 ), Vector2( 100, 80 ), Vector2( 39.5807, 35.172 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/Head/HeadSprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/Body/BodySprite:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.906495, -14.6153 ), Vector2( 40, 10 ), Vector2( -0.906495, -14.6153 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyParts/Body/BodySprite:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyParts/RightHand/RightHandSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -77.1553, -64.6236 ), Vector2( 24.4106, -25.5803 ), Vector2( -77.1553, -64.6236 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyParts/LeftHand/LeftHandSprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 72.1322, -48.9092 ), Vector2( 173.414, -9.13462 ), Vector2( 72.1322, -48.9092 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/LeftLeg/LeftLegSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30.0, -30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/RightLeg/RightLegSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/Body:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ), Vector2( 0, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/Head:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ), Vector2( 0, -110 ), Vector2( 0, -120 ), Vector2( 0, -110 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/LeftHand:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ), Vector2( 0, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyParts/RightHand:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ), Vector2( 0, 10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyParts/LeftHand/LeftHandSprite:rotation_degrees")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyParts/RightHand/RightHandSprite:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyParts/Head/HeadSprite:rotation_degrees")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, 5.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Interact"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeOneShot" id=6]
filter_enabled = true
filters = [ "BodyParts/Body/BodySprite:position", "BodyParts/Body/BodySprite:rotation_degrees", "BodyParts/Body:position", "BodyParts/Body:rotation_degrees", "BodyParts/Head/HeadSprite:position", "BodyParts/Head/HeadSprite:rotation_degrees", "BodyParts/Head:position", "BodyParts/Head:rotation_degrees", "BodyParts/LeftHand/LeftHandSprite:position", "BodyParts/LeftHand/LeftHandSprite:rotation_degrees", "BodyParts/LeftHand:position", "BodyParts/LeftHand:rotation_degrees", "BodyParts/RightHand/RightHandSprite:position", "BodyParts/RightHand/RightHandSprite:rotation_degrees", "BodyParts/RightHand:position", "BodyParts/RightHand:rotation_degrees" ]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Walk"

[sub_resource type="AnimationNodeBlendTree" id=7]
graph_offset = Vector2( -353, -67 )
"nodes/Animation 2/node" = SubResource( 4 )
"nodes/Animation 2/position" = Vector2( 40, 240 )
nodes/idle/node = SubResource( 8 )
nodes/idle/position = Vector2( 10, -20 )
nodes/interact/node = SubResource( 6 )
nodes/interact/position = Vector2( 220, 120 )
nodes/output/position = Vector2( 400, 120 )
nodes/walk/node = SubResource( 5 )
nodes/walk/position = Vector2( -30, 110 )
node_connections = [ "output", 0, "interact", "interact", 0, "idle", "interact", 1, "Animation 2" ]

[node name="ActorBody" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Interact = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="BodyParts" type="Node2D" parent="."]

[node name="LeftHand" type="Node2D" parent="BodyParts"]
position = Vector2( 0, 17.2921 )
rotation = -0.0671106

[node name="LeftHandSprite" type="Sprite" parent="BodyParts/LeftHand"]
position = Vector2( 72.1322, -48.9092 )
rotation = 0.523599
texture = ExtResource( 4 )
offset = Vector2( 49.3177, 65.2949 )

[node name="LeftLeg" type="Node2D" parent="BodyParts"]
position = Vector2( 32, 124 )

[node name="LeftLegSprite" type="Sprite" parent="BodyParts/LeftLeg"]
position = Vector2( 21.0503, -21.3768 )
texture = ExtResource( 2 )
offset = Vector2( -1.26422, 42.262 )

[node name="RightLeg" type="Node2D" parent="BodyParts"]
position = Vector2( -32, 124 )

[node name="RightLegSprite" type="Sprite" parent="BodyParts/RightLeg"]
position = Vector2( -2.50183, -20.2545 )
texture = ExtResource( 2 )
offset = Vector2( -2.58932, 42.0695 )

[node name="Body" type="Node2D" parent="BodyParts"]
position = Vector2( 0, 16.427 )

[node name="BodySprite" type="Sprite" parent="BodyParts/Body"]
position = Vector2( -0.906495, -14.6153 )
texture = ExtResource( 3 )

[node name="Head" type="Node2D" parent="BodyParts"]
position = Vector2( 0, -94.0619 )
rotation = 0.0671106

[node name="HeadSprite" type="Sprite" parent="BodyParts/Head"]
position = Vector2( 39.5807, 35.172 )
texture = ExtResource( 5 )
offset = Vector2( -33.8996, -190.949 )

[node name="RightHand" type="Node2D" parent="BodyParts"]
position = Vector2( 0, 15.5735 )
rotation = -0.0607191

[node name="RightHandSprite" type="Sprite" parent="BodyParts/RightHand"]
position = Vector2( -77.1553, -64.6236 )
rotation = 0.523599
texture = ExtResource( 6 )
offset = Vector2( 46.9349, 87.4871 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/interact/active = false
script = ExtResource( 7 )
